tests/errors/type_check/error_span/structured_undeclared_variable_carries_stmt_span.sim

            fn f() {
              x: i64;
              entry:
                x = copy missing;
                return
            }