tests/errors/type_check/error_span/structured_undeclared_variable_carries_stmt_span.err.expected
error: at 5:17: [TC-UndeclaredVariable] In function 'f', block 'entry': Use of undeclared variable 'missing'
   |
 5 |                 x = copy missing;
   |                 ^^^^^^^^^^^^^^^^
